--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,10 @@
 ---
+<style>
+  p {
+    margin-bottom: 1.25rem;
+    line-height: 1.6;
+    display: block;
+  }
 import Layout from "@layouts/Layout.astro";
 import Container from "@src/components/Container.astro";
 ---
