--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
----
 <style>
   p {
     margin-bottom: 1.25rem;
     line-height: 1.6;
     display: block;
   }
+
+  section {
+    margin-bottom: 2.5rem;
+  }
+</style>
+
+---
 import Layout from "@layouts/Layout.astro";
 import Container from "@src/components/Container.astro";
 ---
