--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -160,7 +160,7 @@ import Container from "@src/components/Container.astro";
             <strong>LinkedIn:</strong>
             <a href="https://www.linkedin.com/in/jezierski-michal/" target="_blank" rel="noopener noreferrer">View my profile</a>
           </li>
-          <li><strong>Email:</strong> [michal.jezierski@complianceofficer.org]</li>
+          <li><strong>Email:</strong> michal.jezierski@complianceofficer.org</li>
         </ul>
         
         <p>
