--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { image, title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.prop
 	</head>
 
 	<body>
-		<Navbar />
+		<!-- <Navbar /> -->
 		<main>
 			<slot />
 		</main>
